Issue #3067755 by huzooka, philosurfer: Boolean checkbox alignment on Features UI’s feature edit form

--- a/css/src/components/fieldset.css
+++ b/css/src/components/fieldset.css
@@ -114,13 +114,17 @@ _:-ms-fullscreen,
 }
 
 .fieldset__wrapper {
-  margin: 0 var(--space-m) var(--space-m);
+  margin: var(--space-m);
 }
 
 @media screen and (min-width: 48em) {
   .fieldset__wrapper {
-    margin: 0 var(--space-l) calc(var(--space-m) + var(--space-s));
+    margin: var(--space-l) var(--space-l) calc(var(--space-m) + var(--space-s));
   }
+}
+
+.fieldset__legend--visible ~ .fieldset__wrapper {
+  margin-top: 0;
 }
 
 .fieldset__wrapper--group {
